testsuite/tests/properties/invalid_predicate/ok_no_default_var/test.lkt
from common import BaseExample, FooNode

class Example: BaseExample {
    @exported fun prop(): Entity[FooNode] = {
        val _ = Example.pred1%(node.var1, node.var2);
        node.as_bare_entity
    }
}
